# murtree

./: .gitignore  CMakeLists.txt  LICENSE.txt  MurTree.sln  MurTree.vcxproj  MurTree.vcxproj.filters  README.md  continuousToCategorical.r  main.cpp  murtree.h  setup.py
LinuxRelease/: MurTree  main.d  makefile  sources.mk  subdir.mk
LinuxRelease/code/MurTree/Data Structures/: binary_data.d  branch.d  decision_tree.d  feature_vector_binary.d  internal_node_description.d  key_value_heap.d  subdir.mk  symmetric_matrix_counter.d  symmetric_matrix_positive_negative_counter_2d.d
LinuxRelease/code/MurTree/Engine/: binary_data_difference_computer.d  branch_cache.d  cache_closure.d  dataset_cache.d  feature_selector_abstract.d  hyper_parameter_tuner.d  similarity_lower_bound_computer.d  solver.d  specialised_binary_classification_decision_tree_solver.d  specialised_branch_misclassification_computer.d  specialised_general_branch_misclassification_computer.d  specialised_general_classification_decision_tree_solver.d  subdir.mk
LinuxRelease/code/MurTree/Utilities/: file_reader.d  parameter_handler.d  subdir.mk
code/MurTree/Data Structures/: binary_data.cpp  binary_data.h  branch.cpp  branch.h  child_subtree_info.h  child_subtree_ordering.h  children_information.h  decision_node.h  decision_tree.cpp  decision_tree.h  feature_vector_binary.cpp  feature_vector_binary.h  internal_node_description.cpp  internal_node_description.h  key_value_heap.cpp  key_value_heap.h  sparse_binary_vector.h  split_binary_data.h  symmetric_matrix_counter.cpp  symmetric_matrix_counter.h  symmetric_matrix_positive_negative_counter_2d.cpp  symmetric_matrix_positive_negative_counter_2d.h
code/MurTree/Engine/: abstract_cache.h  binary_data_difference_computer.cpp  binary_data_difference_computer.h  branch_cache.cpp  branch_cache.h  cache_closure.cpp  cache_closure.h  dataset_cache.cpp  dataset_cache.h  feature_selector_abstract.cpp  feature_selector_abstract.h  feature_selector_gini.h  feature_selector_in_order.h  feature_selector_random.h  hyper_parameter_tuner.cpp  hyper_parameter_tuner.h  similarity_lower_bound_computer.cpp  similarity_lower_bound_computer.h  solver.cpp  solver.h  specialised_binary_classification_decision_tree_solver.cpp  specialised_binary_classification_decision_tree_solver.h  specialised_branch_misclassification_computer.cpp  specialised_branch_misclassification_computer.h  specialised_decision_tree_solver_abstract.h  specialised_general_branch_misclassification_computer.cpp  specialised_general_branch_misclassification_computer.h  specialised_general_classification_decision_tree_solver.cpp  specialised_general_classification_decision_tree_solver.h
code/MurTree/Utilities/: file_reader.cpp  file_reader.h  parameter_handler.cpp  parameter_handler.h  parameters.cpp  parameters.h  runtime_assert.h  solver_result.h  split_data.h  statistics.h  stopwatch.h
